--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.1.1",
     "@angular/router": "^16.1.1",
     "bootstrap": "^5.3.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.5.3",
     "zone.js": "~0.13.1"
@@ -29,6 +30,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.1",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^20.3.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
