--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@angular/*": [
         "node_modules/@angular/*"
-      ]
+      ],
+      "types":["node"]
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
