--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.5.3",
-    "zone.js": "~0.13.1"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
