--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.5.3",
+    "uuid": "^9.0.0",
     "zone.js": "^0.13.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "^16.1.1",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
